--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue-loader": "^15.9.8",
     "vue-router": "^3.5.2",
     "vue-template-compiler": "^2.6.14",
+    "vuetify": "^2.5.8",
     "vuex": "^3.6.2"
   },
   "version": "0.1.0",
